tests/coverage/antlr_parser/FuncTestCaseParser.py
# SPDX-License-Identifier: Apache-2.0
# Generated from FuncTestCaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FuncTestCaseParser ( Parser ):

    grammarFileName = "FuncTestCaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'###'", "'SUBSTRAIT_SCALAR_TEST'", 
                     "'SUBSTRAIT_AGGREGATE_TEST'", "'SUBSTRAIT_INCLUDE'", 
                     "'SUBSTRAIT_DEPENDENCY'", "<INVALID>", "<INVALID>", 
                     "'DEFINE'", "'<!ERROR>'", "'<!UNDEFINED>'", "'OVERFLOW'", 
                     "'ROUNDING'", "'ERROR'", "'SATURATE'", "'SILENT'", 
                     "'TIE_TO_EVEN'", "'NAN'", "'ACCEPT_NULLS'", "'IGNORE_NULLS'", 
                     "'NULL_HANDLING'", "'SPACES_ONLY'", "'TRUNCATE'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'P'", "'T'", 
                     "'Y'", "'M'", "'D'", "'H'", "'S'", "'F'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'null'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'IF'", "'THEN'", "'ELSE'", "'FUNC'", "'BOOLEAN'", 
                     "'I8'", "'I16'", "'I32'", "'I64'", "'FP32'", "'FP64'", 
                     "'STRING'", "'BINARY'", "'DATE'", "'INTERVAL_YEAR'", 
                     "'INTERVAL_DAY'", "'INTERVAL_COMPOUND'", "'UUID'", 
                     "'DECIMAL'", "'PRECISION_TIME'", "'PRECISION_TIMESTAMP'", 
                     "'PRECISION_TIMESTAMP_TZ'", "'FIXEDCHAR'", "'VARCHAR'", 
                     "'FIXEDBINARY'", "'STRUCT'", "'NSTRUCT'", "'LIST'", 
                     "'MAP'", "'U!'", "'BOOL'", "'STR'", "'VBIN'", "'IYEAR'", 
                     "'IDAY'", "'ICOMPOUND'", "'DEC'", "'PT'", "'PTS'", 
                     "'PTSTZ'", "'FCHAR'", "'VCHAR'", "'FBIN'", "'ANY'", 
                     "<INVALID>", "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'!='", "'>='", "'<='", "'>'", "'<'", "'!'", 
                     "'('", "')'", "'['", "']'", "','", "':'", "'?'", "'#'", 
                     "'.'", "'AND'", "'OR'", "':='", "'->'" ]

    symbolicNames = [ "<INVALID>", "Whitespace", "TripleHash", "SubstraitScalarTest", 
                      "SubstraitAggregateTest", "SubstraitInclude", "SubstraitDependency", 
                      "FormatVersion", "DescriptionLine", "Define", "ErrorResult", 
                      "UndefineResult", "Overflow", "Rounding", "Error", 
                      "Saturate", "Silent", "TieToEven", "NaN", "AcceptNulls", 
                      "IgnoreNulls", "NullHandling", "SpacesOnly", "Truncate", 
                      "IntegerLiteral", "DecimalLiteral", "FloatLiteral", 
                      "BooleanLiteral", "TimestampTzLiteral", "TimestampLiteral", 
                      "TimeLiteral", "DateLiteral", "PeriodPrefix", "TimePrefix", 
                      "YearSuffix", "MSuffix", "DaySuffix", "HourSuffix", 
                      "SecondSuffix", "FractionalSecondSuffix", "OAngleBracket", 
                      "CAngleBracket", "IntervalYearLiteral", "IntervalDayLiteral", 
                      "IntervalCompoundLiteral", "NullLiteral", "StringLiteral", 
                      "ColumnName", "LineComment", "BlockComment", "If", 
                      "Then", "Else", "Func", "Boolean", "I8", "I16", "I32", 
                      "I64", "FP32", "FP64", "String", "Binary", "Date", 
                      "Interval_Year", "Interval_Day", "Interval_Compound", 
                      "UUID", "Decimal", "Precision_Time", "Precision_Timestamp", 
                      "Precision_Timestamp_TZ", "FixedChar", "VarChar", 
                      "FixedBinary", "Struct", "NStruct", "List", "Map", 
                      "UserDefined", "Bool", "Str", "VBin", "IYear", "IDay", 
                      "ICompound", "Dec", "PT", "PTs", "PTsTZ", "FChar", 
                      "VChar", "FBin", "Any", "AnyVar", "DoubleColon", "Plus", 
                      "Minus", "Asterisk", "ForwardSlash", "Percent", "Eq", 
                      "Ne", "Gte", "Lte", "Gt", "Lt", "Bang", "OParen", 
                      "CParen", "OBracket", "CBracket", "Comma", "Colon", 
                      "QMark", "Hash", "Dot", "And", "Or", "Assign", "Arrow", 
                      "Number", "Identifier", "Newline" ]

    RULE_doc = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_dependency = 4
    RULE_testGroupDescription = 5
    RULE_testCase = 6
    RULE_testGroup = 7
    RULE_arguments = 8
    RULE_result = 9
    RULE_argument = 10
    RULE_aggFuncTestCase = 11
    RULE_aggFuncCall = 12
    RULE_tableData = 13
    RULE_tableRows = 14
    RULE_dataColumn = 15
    RULE_columnValues = 16
    RULE_literal = 17
    RULE_qualifiedAggregateFuncArgs = 18
    RULE_aggregateFuncArgs = 19
    RULE_qualifiedAggregateFuncArg = 20
    RULE_aggregateFuncArg = 21
    RULE_numericLiteral = 22
    RULE_floatLiteral = 23
    RULE_nullArg = 24
    RULE_intArg = 25
    RULE_floatArg = 26
    RULE_decimalArg = 27
    RULE_booleanArg = 28
    RULE_stringArg = 29
    RULE_dateArg = 30
    RULE_intervalYearArg = 31
    RULE_intervalDayArg = 32
    RULE_intervalCompoundArg = 33
    RULE_fixedCharArg = 34
    RULE_varCharArg = 35
    RULE_fixedBinaryArg = 36
    RULE_precisionTimeArg = 37
    RULE_precisionTimestampArg = 38
    RULE_precisionTimestampTZArg = 39
    RULE_listArg = 40
    RULE_lambdaArg = 41
    RULE_literalList = 42
    RULE_literalLambda = 43
    RULE_lambdaParameters = 44
    RULE_lambdaBody = 45
    RULE_dataType = 46
    RULE_scalarType = 47
    RULE_booleanType = 48
    RULE_stringType = 49
    RULE_binaryType = 50
    RULE_intType = 51
    RULE_floatType = 52
    RULE_dateType = 53
    RULE_intervalYearType = 54
    RULE_intervalDayType = 55
    RULE_intervalCompoundType = 56
    RULE_fixedCharType = 57
    RULE_varCharType = 58
    RULE_fixedBinaryType = 59
    RULE_decimalType = 60
    RULE_precisionTimeType = 61
    RULE_precisionTimestampType = 62
    RULE_precisionTimestampTZType = 63
    RULE_listType = 64
    RULE_funcType = 65
    RULE_funcParameters = 66
    RULE_parameterizedType = 67
    RULE_numericParameter = 68
    RULE_substraitError = 69
    RULE_funcOption = 70
    RULE_optionName = 71
    RULE_optionValue = 72
    RULE_funcOptions = 73
    RULE_nonReserved = 74
    RULE_identifier = 75

    ruleNames =  [ "doc", "header", "version", "include", "dependency", 
                   "testGroupDescription", "testCase", "testGroup", "arguments", 
                   "result", "argument", "aggFuncTestCase", "aggFuncCall", 
                   "tableData", "tableRows", "dataColumn", "columnValues", 
                   "literal", "qualifiedAggregateFuncArgs", "aggregateFuncArgs", 
                   "qualifiedAggregateFuncArg", "aggregateFuncArg", "numericLiteral", 
                   "floatLiteral", "nullArg", "intArg", "floatArg", "decimalArg", 
                   "booleanArg", "stringArg", "dateArg", "intervalYearArg", 
                   "intervalDayArg", "intervalCompoundArg", "fixedCharArg", 
                   "varCharArg", "fixedBinaryArg", "precisionTimeArg", "precisionTimestampArg", 
                   "precisionTimestampTZArg", "listArg", "lambdaArg", "literalList", 
                   "literalLambda", "lambdaParameters", "lambdaBody", "dataType", 
                   "scalarType", "booleanType", "stringType", "binaryType", 
                   "intType", "floatType", "dateType", "intervalYearType", 
                   "intervalDayType", "intervalCompoundType", "fixedCharType", 
                   "varCharType", "fixedBinaryType", "decimalType", "precisionTimeType", 
                   "precisionTimestampType", "precisionTimestampTZType", 
                   "listType", "funcType", "funcParameters", "parameterizedType", 
                   "numericParameter", "substraitError", "funcOption", "optionName", 
                   "optionValue", "funcOptions", "nonReserved", "identifier" ]

    EOF = Token.EOF
    Whitespace=1
    TripleHash=2
    SubstraitScalarTest=3
    SubstraitAggregateTest=4
    SubstraitInclude=5
    SubstraitDependency=6
    FormatVersion=7
    DescriptionLine=8
    Define=9
    ErrorResult=10
    UndefineResult=11
    Overflow=12
    Rounding=13
    Error=14
    Saturate=15
    Silent=16
    TieToEven=17
    NaN=18
    AcceptNulls=19
    IgnoreNulls=20
    NullHandling=21
    SpacesOnly=22
    Truncate=23
    IntegerLiteral=24
    DecimalLiteral=25
    FloatLiteral=26
    BooleanLiteral=27
    TimestampTzLiteral=28
    TimestampLiteral=29
    TimeLiteral=30
    DateLiteral=31
    PeriodPrefix=32
    TimePrefix=33
    YearSuffix=34
    MSuffix=35
    DaySuffix=36
    HourSuffix=37
    SecondSuffix=38
    FractionalSecondSuffix=39
    OAngleBracket=40
    CAngleBracket=41
    IntervalYearLiteral=42
    IntervalDayLiteral=43
    IntervalCompoundLiteral=44
    NullLiteral=45
    StringLiteral=46
    ColumnName=47
    LineComment=48
    BlockComment=49
    If=50
    Then=51
    Else=52
    Func=53
    Boolean=54
    I8=55
    I16=56
    I32=57
    I64=58
    FP32=59
    FP64=60
    String=61
    Binary=62
    Date=63
    Interval_Year=64
    Interval_Day=65
    Interval_Compound=66
    UUID=67
    Decimal=68
    Precision_Time=69
    Precision_Timestamp=70
    Precision_Timestamp_TZ=71
    FixedChar=72
    VarChar=73
    FixedBinary=74
    Struct=75
    NStruct=76
    List=77
    Map=78
    UserDefined=79
    Bool=80
    Str=81
    VBin=82
    IYear=83
    IDay=84
    ICompound=85
    Dec=86
    PT=87
    PTs=88
    PTsTZ=89
    FChar=90
    VChar=91
    FBin=92
    Any=93
    AnyVar=94
    DoubleColon=95
    Plus=96
    Minus=97
    Asterisk=98
    ForwardSlash=99
    Percent=100
    Eq=101
    Ne=102
    Gte=103
    Lte=104
    Gt=105
    Lt=106
    Bang=107
    OParen=108
    CParen=109
    OBracket=110
    CBracket=111
    Comma=112
    Colon=113
    QMark=114
    Hash=115
    Dot=116
    And=117
    Or=118
    Assign=119
    Arrow=120
    Number=121
    Identifier=122
    Newline=123

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(FuncTestCaseParser.HeaderContext,0)


        def EOF(self):
            return self.getToken(FuncTestCaseParser.EOF, 0)

        def testGroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FuncTestCaseParser.TestGroupContext)
            else:
                return self.getTypedRuleContext(FuncTestCaseParser.TestGroupContext,i)


        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_doc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoc" ):
                listener.enterDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoc" ):
                listener.exitDoc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoc" ):
                return visitor.visitDoc(self)
            else:
                return visitor.visitChildren(self)




    def doc(self):

        localctx = FuncTestCaseParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.header()
            self.state = 154 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 153
                self.testGroup()
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8389376) != 0) or ((((_la - 108)) & ~0x3f) == 0 and ((1 << (_la - 108)) & 17921) != 0)):
                    break

            self.state = 158
            self.match(FuncTestCaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(FuncTestCaseParser.VersionContext,0)


        def include(self):
            return self.getTypedRuleContext(FuncTestCaseParser.IncludeContext,0)


        def dependency(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FuncTestCaseParser.DependencyContext)
            else:
                return self.getTypedRuleContext(FuncTestCaseParser.DependencyContext,i)


        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = FuncTestCaseParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.version()
            self.state = 161
            self.include()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 162
                self.dependency()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def FormatVersion(self):
            return self.getToken(FuncTestCaseParser.FormatVersion, 0)

        def SubstraitScalarTest(self):
            return self.getToken(FuncTestCaseParser.SubstraitScalarTest, 0)

        def SubstraitAggregateTest(self):
            return self.getToken(FuncTestCaseParser.SubstraitAggregateTest, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = FuncTestCaseParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 169
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 170
            self.match(FuncTestCaseParser.Colon)
            self.state = 171
            self.match(FuncTestCaseParser.FormatVersion)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def SubstraitInclude(self):
            return self.getToken(FuncTestCaseParser.SubstraitInclude, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def StringLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(FuncTestCaseParser.StringLiteral)
            else:
                return self.getToken(FuncTestCaseParser.StringLiteral, i)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(FuncTestCaseParser.Comma)
            else:
                return self.getToken(FuncTestCaseParser.Comma, i)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = FuncTestCaseParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 174
            self.match(FuncTestCaseParser.SubstraitInclude)
            self.state = 175
            self.match(FuncTestCaseParser.Colon)
            self.state = 176
            self.match(FuncTestCaseParser.StringLiteral)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==112:
                self.state = 177
                self.match(FuncTestCaseParser.Comma)
                self.state = 178
                self.match(FuncTestCaseParser.StringLiteral)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def SubstraitDependency(self):
            return self.getToken(FuncTestCaseParser.SubstraitDependency, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def StringLiteral(self):
            return self.getToken(FuncTestCaseParser.StringLiteral, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_dependency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependency" ):
                listener.enterDependency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependency" ):
                listener.exitDependency(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDependency" ):
                return visitor.visitDependency(self)
            else:
                return visitor.visitChildren(self)




    def dependency(self):

        localctx = FuncTestCaseParser.DependencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dependency)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 185
            self.match(FuncTestCaseParser.SubstraitDependency)
            self.state = 186
            self.match(FuncTestCaseParser.Colon)
            self.state = 187
            self.match(FuncTestCaseParser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestGroupDescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DescriptionLine(self):
            return self.getToken(FuncTestCaseParser.DescriptionLine, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_testGroupDescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestGroupDescription" ):
                listener.enterTestGroupDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestGroupDescription" ):
                listener.exitTestGroupDescription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestGroupDescription" ):
                return visitor.visitTestGroupDescription(self)
            else:
                return visitor.visitChildren(self)




    def testGroupDescription(self):

        localctx = FuncTestCaseParser.TestGroupDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testGroupDescription)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(FuncTestCaseParser.DescriptionLine)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestCaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None # IdentifierContext

        def OParen(self):
            return self.getToken(FuncTestCaseParser.OParen, 0)

        def arguments(self):
            return self.getTypedRuleContext(FuncTestCaseParser.ArgumentsContext,0)


        def CParen(self):
            return self.getToken(FuncTestCaseParser.CParen, 0)

        def Eq(self):
            return self.getToken(FuncTestCaseParser.Eq, 0)

        def result(self):
            return self.getTypedRuleContext(FuncTestCaseParser.ResultContext,0)


        def identifier(self):
            return self.getTypedRuleContext(FuncTestCaseParser.IdentifierContext,0)


        def OBracket(self):
            return self.getToken(FuncTestCaseParser.OBracket, 0)

        def funcOptions(self):
            return self.getTypedRuleContext(FuncTestCaseParser.FuncOptionsContext,0)


        def CBracket(self):
            return self.getToken(FuncTestCaseParser.CBracket, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_testCase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestCase" ):
                listener.enterTestCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestCase" ):
                listener.exitTestCase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestCase" ):
                return visitor.visitTestCase(self)
            else:
                return visitor.visitChildren(self)




    def testCase(self):
